event actions spacing fix only in prod.

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -476,6 +476,7 @@ p.copyright {
   padding-top: 1rem;
   text-align: center;
   display: table;
+  width: 100%;
 }
 
 .event-options .event-option {
